# erlc-api

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  comparision.md  comparison.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  publish-wiki.yml
docs/wiki/: Clients-and-Authentication.md  Commands-Reference.md  Comparison-and-Why-erlc-api.md  Custom-Commands-Reference.md  Emergency-Calls.md  Endpoint-Reference.md  Endpoint-Usage-Cookbook.md  Error-Handling-and-Troubleshooting.md  Errors-and-Rate-Limits.md  Errors-and-Troubleshooting.md  Event-Webhooks-and-Custom-Commands.md  FAQ.md  Formatting-Analytics-and-Export.md  Function-List.md  Getting-Started.md  Home.md  How-It-Works.md  Installation-and-Extras.md  Migration-to-v2.md  Migration-to-v3.md  Models-Reference.md  Moderation-Helpers.md  Ops-Utilities-Reference.md  Permission-Levels.md  Quickstart-Discord.py.md  Quickstart-Web-Backend.md  Rate-Limits-Retries-and-Reliability.md  Roblox-Utils.md  Scaling-Your-App.md  Security-and-Secrets.md  Testing-and-Mocking.md  Typed-vs-Raw-Responses.md  Utilities-Reference.md  Vehicle-Tools.md  Waiters-and-Watchers.md  Wanted-Stars.md  Webhooks-Reference.md  Workflow-Utilities-Reference.md  _Sidebar.md
examples/: basic_async.py  basic_sync.py  bundle_dashboard.py  discord_bot.py  safe_command.py
scripts/: publish_wiki.ps1  publish_wiki.sh  smoke.example.py  smoke.py
src/erlc_api/: __init__.py  _cache.py  _constants.py  _error_codes.py  _errors.py  _http.py  _metrics.py  _ratelimit.py  _utility.py  analytics.py  audit.py  bundle.py  cache.py  client.py  command_flows.py  commands.py  context.py  custom_commands.py  diagnostics.py  diff.py  discord_tools.py  emergency.py  error_codes.py  export.py  filter.py  find.py  format.py  group.py  helpers.py  idempotency.py  limits.py  location.py  models.py  moderation.py  multiserver.py  ratelimit.py  roblox.py  rules.py  schema.py  security.py  (+12 more)
src/erlc_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/erlc_api/discord/: __init__.py
src/erlc_api/utils/: __init__.py  diff.py  filters.py  polling.py
src/erlc_api/web/: __init__.py  dto.py  metrics.py
tests/: test_client.py  test_command_metrics.py  test_command_policy_security.py  test_custom_commands.py  test_discord_adapter.py  test_helpers.py  test_http.py  test_http_advanced.py  test_import.py  test_lightweight_client.py  test_lightweight_models_utils.py  test_models.py  test_models_v2_expanded.py  test_modular_utilities.py  test_ops_utilities.py  test_ratelimit.py  test_ratelimit_advanced.py  test_ratelimit_error_codes.py  test_roblox.py  test_tracking.py  test_typed_endpoints.py  test_utils_diff.py  test_utils_filters.py  test_utils_polling.py  test_v1_command_features.py  test_v240_features.py  test_validated_models.py  test_web_adapter.py  test_webhooks.py  test_workflow_utilities.py
