[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erlc-api"
version = "1.0.1"
description = "Async Python wrapper for ER:LC PRC Private Server API (v1 + v2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
  "ruff>=0.3"
]
