[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erlc-api.py"
version = "3.0.0"
description = "Lightweight sync and async Python wrapper for the ER:LC PRC API"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-ERLC-API-Wrapper-Attribution-License-1.0"
license-files = ["LICENSE"]
authors = [
  {name = "Avi Sehrawat"}
]
maintainers = [
  {name = "Avi Sehrawat"}
]
keywords = [
  "erlc",
  "er:lc",
  "prc",
  "prc-api",
  "roblox",
  "api-wrapper",
  "async",
  "sync",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/Fortune1243/erlc-api"
Repository = "https://github.com/Fortune1243/erlc-api"
Issues = "https://github.com/Fortune1243/erlc-api/issues"
Documentation = "https://github.com/Fortune1243/erlc-api/tree/master/docs/wiki"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
erlc_api = ["py.typed"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
  "ruff>=0.3"
]
webhooks = ["cryptography>=42.0"]
export = ["openpyxl>=3.1"]
time = ["python-dateutil>=2.9"]
rich = ["rich>=13.0"]
scheduling = ["apscheduler>=3.10"]
location = ["Pillow>=10.0"]
utils = [
  "openpyxl>=3.1",
  "python-dateutil>=2.9",
  "rich>=13.0",
  "apscheduler>=3.10",
  "Pillow>=10.0",
]
all = [
  "cryptography>=42.0",
  "openpyxl>=3.1",
  "python-dateutil>=2.9",
  "rich>=13.0",
  "apscheduler>=3.10",
  "Pillow>=10.0",
]
